# obs-nozzle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/locale/: en-US.ini
src/: nozzle-output.cpp  nozzle-plugin.cpp  nozzle-plugin.h  nozzle-source.cpp
